deleted bad methods and refactor

--- a/student/mainpage.html
+++ b/student/mainpage.html
@@ -1,18 +1,13 @@
 
-<script src="./js/rand.js"></script>
+
 <div class="greybox">
   <h1 class="subtitle">This is a site for monitoring Cars.</h1>
-  <p>Choose the car menu from below, or from the topnav! You can do the same with the manufacturers.</p>
+  <p>Please select the cars or manufacturers from the topnav.</p>
 </div>
 
 <table class="imageTable" id="imageTable">
   <tr>
-    <th class="imageRef">
-      <a href="car"><img src="images/roadster.jpg"></a>
-    </th>
-    <th class="imageRef">
-      <a href="manufacturer"><img src="images/audi.jpg"></a>
-    </th>
+    <img class="welcomeImage" src="images/welcome.jpg">
   </tr>
 </table>
 
@@ -47,20 +42,13 @@ As he leaned down to pick up the ball, young Armstrong heard Mrs. Gorsky shoutin
       <td>
         <div>
           <a href="https://www.facebook.com/rajmund.horak.52"> <img class="faceimg" src="images/facebook.svg"></a>
-          <a href="https://www.youtube.com/user/raymileshun"><img class="youtubeimg" src="images/youtube.svg"></a>
+          <a href="https://www.youtube.com/"><img class="youtubeimg" src="images/youtube.svg"></a>
         </div>
       </td>
     </tr>
     <tr>
       <td><h3>horakrajmund@gmail.com</h3></td>
     </tr>
-
-
   </table>
 
-</div>
-
-<div id="carForYou">
-  <h2 >Which car would suit you the most? Click on the button and find out!</h2>
-  <button type="button" class="button" id="randomCarButton">Click</button>
 </div>
